--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "node-wit": "^4.2.0",
+    "pokedex-promise-v2": "^3.0.3",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   }
